--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>WebRTC Simple Application</title>
 	<link rel="stylesheet" href="styles.css" />
+	<link rel="icon" href="data:,">
 </head>
 <body>
 </body>
