--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 	<title>WebRTC Simple Application</title>
 	<link rel="stylesheet" href="styles.css" />
 	<link rel="icon" href="data:,">
+	<script src="script.js" defer></script>
 </head>
 <body>
 </body>
