Add local username field and various buttons

--- a/static/index.html
+++ b/static/index.html
@@ -6,5 +6,10 @@
 	<script src="script.js" defer></script>
 </head>
 <body>
+	<label for="localUsername">Our username: </label>
+	<input type="text" id="localUsername" name="localUsername"/>
+	<button type="button" id="setUsername">Set username</button>
+	<button type="button" id="registerUsername">Register username</button>
+	<button type="button" id="unregisterUsername">Unregister username</button>
 </body>
 </html>
