Add remote username field

--- a/static/index.html
+++ b/static/index.html
@@ -11,5 +11,8 @@
 	<button type="button" id="setUsername">Set username</button>
 	<button type="button" id="registerUsername">Register username</button>
 	<button type="button" id="unregisterUsername">Unregister username</button>
+	<br/>
+	<label for="remoteUsername">Their username: </label>
+	<input type="text" id="remoteUsername" name="remoteUsername"/>
 </body>
 </html>
