Implement basic calling protocol

--- a/static/index.html
+++ b/static/index.html
@@ -14,5 +14,8 @@
 	<br/>
 	<label for="remoteUsername">Their username: </label>
 	<input type="text" id="remoteUsername" name="remoteUsername"/>
+	<button type="button" id="initiateCall">Initiate call</button>
+	<button type="button" id="receiveCall">Receive call</button>
+	<button type="button" id="endCall" disabled="true">End call</button>
 </body>
 </html>
