Display call status

--- a/static/index.html
+++ b/static/index.html
@@ -17,5 +17,8 @@
 	<button type="button" id="initiateCall">Initiate call</button>
 	<button type="button" id="receiveCall">Receive call</button>
 	<button type="button" id="endCall" disabled="true">End call</button>
+	<br/>
+	<label for="callStatus">Call status: </label>
+	<output id="callStatus" name="callStatus">DISCONNECTED</output>
 </body>
 </html>
