Show local video stream

--- a/static/index.html
+++ b/static/index.html
@@ -30,5 +30,8 @@
 	<br/>
 	<label for="callStatus">Call status: </label>
 	<output id="callStatus" name="callStatus">DISCONNECTED</output>
+	<br/>
+	<p>Local Video</p>
+	<video id="localVideo" autoplay playsinline></video>
 </body>
 </html>
