Mute local audio

--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,6 @@
 	<output id="callStatus" name="callStatus">DISCONNECTED</output>
 	<br/>
 	<p>Local Video</p>
-	<video id="localVideo" autoplay playsinline></video>
+	<video id="localVideo" autoplay muted playsinline></video>
 </body>
 </html>
