Show remote video stream

--- a/static/index.html
+++ b/static/index.html
@@ -33,5 +33,8 @@
 	<br/>
 	<p>Local Video</p>
 	<video id="localVideo" autoplay muted playsinline></video>
+	<br/>
+	<p>Remote Video</p>
+	<video id="remoteVideo" autoplay playsinline></video>
 </body>
 </html>
